Fixed mobile responsive bug. Menu hides by default on smaller screens <768 px.

--- a/app/dashboard/dashboard.component.css
+++ b/app/dashboard/dashboard.component.css
@@ -1,11 +1,24 @@
 #side-bar {
     /*border: 5px dotted red;*/
     width: 0;
-    flex: 1 1 auto;
+    flex: 0 1 auto;
     transition: all .5s ease;
 }
-
 #wrapper.toggled #side-bar {
-    flex: 0 1 auto;
+    width: 0;
+    flex: 1 1 auto;
     transition: all 0.5s ease;
+}
+
+@media(min-width:768px) {
+    #side-bar {
+        /*border: 5px dotted red;*/
+        width: 0;
+        flex: 1 1 auto;
+        transition: all .5s ease;
+    }
+    #wrapper.toggled #side-bar {
+        flex: 0 1 auto;
+        transition: all 0.5s ease;
+    }
 }
