--- a/app/side-nav/side.component.css
+++ b/app/side-nav/side.component.css
@@ -12,14 +12,11 @@
 /* Toggle Styles */
 
 #wrapper {
-    padding-left: 0;
+    /*padding-left: 0;*/
     -webkit-transition: all 0.1s ease;
     -moz-transition: all 0.1s ease;
     -o-transition: all 0.1s ease;
     transition: all 0.1s ease;
-}
-
-#wrapper {
     height: 100%;
     display: flex;
     flex-direction: row;
@@ -27,7 +24,7 @@
 }
 
 #wrapper.toggled {
-    padding-left: 250px;
+    /*padding-left: 250px;*/
 }
 
 #sidebar-wrapper {
@@ -49,19 +46,31 @@
 
 #wrapper.toggled #sidebar-wrapper {
     width: 100%;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
 }
 
 #page-content-wrapper {
-    position: absolute;
-    flex: 5 1 auto;
+    /*position: absolute;*/
+    flex: 1 1 auto;
     width: 0;
     /*border: 5px dotted blue;*/
     overflow: auto;
 }
 
 #wrapper.toggled #page-content-wrapper {
-    position: absolute;
+    /*position: absolute;
     margin-right: -250px;
+    flex: 1 1 auto;*/
+    width: 0;
+    /*border: 5px dotted blue;*/
+    overflow: auto;
+    -webkit-transition: all 2s ease;
+    -moz-transition: all 2s ease;
+    -o-transition: all 2s ease;
+    transition: all 2s ease;
 }
 
 /* Sidebar Styles */
@@ -126,7 +135,7 @@
     }
 
     #wrapper.toggled {
-        padding-left: 0;
+        /*padding-left: 0;*/
     }
 
     #sidebar-wrapper {
@@ -142,7 +151,11 @@
     }
 
     #page-content-wrapper {
-        position: relative;
+        /*position: relative;*/
+        flex: 5 1 auto;
+        width: 0;
+        /*border: 5px dotted blue;*/
+        overflow: auto;
     }
 
     #wrapper.toggled #page-content-wrapper {
